fix: ensure correct JAR name in Dockerfile and set permissive CORS for debugging